tests/rosetta/out/C/call-an-object-method-3.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:48Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:20:48Z
#include <stdio.h>
#include <stdlib.h>

typedef struct box_t box_t;

typedef struct box_t {
  char *Contents;
  int secret;
} box_t;
typedef struct {
  int len;
  box_t *data;
} box_list_t;
box_list_t create_box_list(int len) {
  box_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(box_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
int Box_TellSecret(box_t *self) { return self->secret; }

box_t New() {
  box_t b = (box_t){.contents = "rabbit", .secret = 1};
  return b;
}

int _mochi_main() {
  box_t box = New();
  Box_TellSecret(&box);
  return 0;
}
int main() { return _mochi_main(); }
